Add `anyhow` dependency and enhance invariant documentation
- Included `anyhow` as a development dependency in `Cargo.toml`.
- Updated `EVAL_TEST_CANDIDATES.md` to document the new invariant for 6005 Retry Error Detection.
- Enhanced `INVARIANTS.md` with detailed descriptions and context for the 6005 BondingCurveComplete detection.
- Added unit tests for 6005 error detection in `error_detection_6005.rs` and `invariants_6005_detection.rs`, verifying various error string formats.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ ironcrab = { path = "../Iron_crab" }
 solana-sdk = "=3.0.0"
 
 [dev-dependencies]
+anyhow = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 serde_json = "1"
 rust_decimal = { version = "1", features = ["serde"] }
