--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ solana-sdk = "=3.0.0"
 [dev-dependencies]
 anyhow = "1"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rust_decimal = { version = "1", features = ["serde"] }
 tempfile = "3"
