--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -45,6 +45,10 @@ jobs:
         run: cargo clippy -p ironcrab-eval --all-targets -- -D warnings
         working-directory: ironcrab-eval
 
+      - name: Build execution-engine (für Golden-Replay-Tests, DoD G.P1)
+        run: cargo build --manifest-path ../Iron_crab/Cargo.toml --bin execution-engine
+        working-directory: ironcrab-eval
+
       - name: Run tests
         run: cargo test --verbose
         working-directory: ironcrab-eval
